Fix error in flushing by changing terminating method